--- a/main.yml
+++ b/main.yml
@@ -1,5 +1,6 @@
 ---
 - name: installing apache webserver
+- name: installing php fpm package.
 - name: creating httpd.conf from template.
 - name: creating virtualhost configuration.
 - name: creating documentroot.
